Regression: 2D transform gizmo broken/unreliable wrong axis #95183

Closed
opened 2022-01-24 18:31:13 +01:00 by John · 17 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2080

Blender Version
Broken: 3.0
Worked: 2.93.7

Caused by e11b33fec3

Short description of error
Regression: 2D transform gizmo broken/unreliable wrong axis.
Example: The X axis handles of the UV transform tool do not function correctly. Grabbing the left or right edges will still use up/down mouse movement for scaling [which is an awkward experience]. The Y axis functions correctly.
This is true for any 2D cage transform, also in the VSE for example.

Exact steps for others to reproduce the error

  • Start a new project
  • Select the UVs
  • Select the transform tool
  • And move the left or right handles.
    (sometimes multiple tries are needed to cause the bug for some reason - restart blender in that case and retry again)

https://i.gyazo.com/b26b168fe35381599f802edef8eaab70.mp4

Sidenote: we also lost the handy indicators (hover icons) that would indicate if this is left/right or up/down
(that changed in 482806c816, reported separately in #95290 (Regression: 2D transform gizmo hover cursor does not indicate axis anymore).

**System Information** Operating system: Windows 10 Graphics card: RTX 2080 **Blender Version** Broken: 3.0 Worked: 2.93.7 Caused by e11b33fec3 **Short description of error** Regression: 2D transform gizmo broken/unreliable wrong axis. Example: The X axis handles of the UV transform tool do not function correctly. Grabbing the left or right edges will still use up/down mouse movement for scaling [which is an awkward experience]. The Y axis functions correctly. This is true for any 2D cage transform, also in the VSE for example. **Exact steps for others to reproduce the error** - Start a new project - Select the UVs - Select the transform tool - And move the left or right handles. (sometimes multiple tries are needed to cause the bug for some reason - restart blender in that case and retry again) https://i.gyazo.com/b26b168fe35381599f802edef8eaab70.mp4 Sidenote: we also lost the handy indicators (hover icons) that would indicate if this is left/right or up/down (that changed in 482806c816, reported separately in #95290 (Regression: 2D transform gizmo hover cursor does not indicate axis anymore).
Author

Added subscriber: @kiiryu

Added subscriber: @kiiryu
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm.

Will bisect.

Thanks for the report. I can confirm. Will bisect.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pratik Borhade self-assigned this 2022-01-25 16:50:42 +01:00
Member

@kiiryu, probably I tested on older build. Can you please check again on recent development builds?: https://builder.blender.org/download/daily
This has been fixed there and also backported for corrective release (works fine here aafbd74646).
I think this can be closed.
Don't hesitate to comment if problem persists on recent builds.

@kiiryu, probably I tested on older build. Can you please check again on recent development builds?: https://builder.blender.org/download/daily This has been fixed there and also backported for corrective release (works fine here aafbd7464656). I think this can be closed. Don't hesitate to comment if problem persists on recent builds.
Author

@PratikPB2123
I tested on 3.1.0 alpha, and it had the UV scaling problem. Which versions should I be testing?
And sorry if I'm doing any of this incorrectly, this is the first bug I've reported for Blender.

@PratikPB2123 I tested on 3.1.0 alpha, and it had the UV scaling problem. Which versions should I be testing? And sorry if I'm doing any of this incorrectly, this is the first bug I've reported for Blender.
Member

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'
Pratik Borhade removed their assignment 2022-01-27 07:24:41 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Hi John, thanks for testing. I am not able to reproduce.
After testing for a couple of times on 3.0.1 I managed to reproduce. But not on 3.1.0
Blender 2022-01-27 11-46-07.mp4
@lichtwerk , can you confirm?

Hi John, thanks for testing. I am not able to reproduce. After testing for a couple of times on 3.0.1 I managed to reproduce. But not on 3.1.0 [Blender 2022-01-27 11-46-07.mp4](https://archive.blender.org/developer/F12826908/Blender_2022-01-27_11-46-07.mp4) @lichtwerk , can you confirm?
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce here (not entirely sure how exactly this happens -- sometimes it works, sometimes it doesnt), but have a suspicion, wil check...

I can reproduce here (not entirely sure how exactly this happens -- sometimes it works, sometimes it doesnt), but have a suspicion, wil check...
Philipp Oeser changed title from UV transform tool X-axis does not follow the mouse position when scaling. to Regression: 2D transform gizmo broken/unreliable wrong axis 2022-01-28 16:13:36 +01:00
Member

Added subscribers: @iss, @ideasman42

Added subscribers: @iss, @ideasman42
Member

@iss, @ideasman42 : could you check?

@iss, @ideasman42 : could you check?
Author

In #95183#1296959, @lichtwerk wrote:
I can reproduce here (not entirely sure how exactly this happens -- sometimes it works, sometimes it doesnt), but have a suspicion, wil check...

This is also strange, because for me it seems to happen 100% of the time on the versions where it occurs, even after multiple Blender restarts. Yet it never happens on 2.93.7.

> In #95183#1296959, @lichtwerk wrote: > I can reproduce here (not entirely sure how exactly this happens -- sometimes it works, sometimes it doesnt), but have a suspicion, wil check... This is also strange, because for me it seems to happen 100% of the time on the versions where it occurs, even after multiple Blender restarts. Yet it never happens on 2.93.7.

This issue was referenced by 867e50b886

This issue was referenced by 867e50b8862c0c14ef37479a5e0ed8057fd3f637

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-02-23 14:33:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95183
No description provided.