Fix T95183: Cage gizmo axis unreliable

`orient_matrix` was not initialized.

Reviewed By: lichtwerk

Differential Revision: https://developer.blender.org/D14167